# ProjectAbsoluteAccuracy

./: README.md  simSetup.py  urdfMaker.py
ROS_self_made_packages/abb_robot_calibration/: package.xml
ROS_self_made_packages/abb_robot_calibration/config/: calibrate.yaml  capture.yaml
ROS_self_made_packages/abb_robot_calibration/launch/: calibrate.launch  capture.launch
ROS_self_made_packages/abb_robot_calibration/src/: abb_robot_calibration_capture.cpp
ROS_self_made_packages/camera_w_ROS_n_OpenCV/: CMakeLists.txt  package.xml
ROS_self_made_packages/camera_w_ROS_n_OpenCV/src/: image_publisher.cpp
ROS_self_made_packages/fieldlab_irb1600_test/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROS_self_made_packages/robot_calibration/src/: calibrate.cpp  chain_manager.cpp
ROS_self_made_packages/robot_code/src/: robot_code_node.cpp
ROS_self_made_packages/robot_irb1600_id/: .setup_assistant  CMakeLists.txt  package.xml  sim_setup_config.txt
ROS_self_made_packages/robot_irb1600_id/config/: fake_controllers.yaml  robot_irb1600_id.srdf
ROS_self_made_packages/robot_irb1600_id/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ROS_self_made_packages/robot_irb1600_id/urdf/: robot_irb1600_id.urdf
ROS_self_made_packages/robot_irb1660_id/: .setup_assistant  CMakeLists.txt  package.xml  sim_setup_config.txt
ROS_self_made_packages/robot_irb1660_id/config/: abb_irb2400.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot_irb1660_id.srdf  ros_controllers.yaml  sensors_3d.yaml
ROS_self_made_packages/robot_irb1660_id/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  irb1600_6_12_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  planning_context.launch  robot_cal.launch  robot_interface_download_irb1600_6_12.launch  ros_controllers.launch  (+6 more)
abb_driver/src/: abb_joint_downloader_node.cpp  abb_robot_state_node.cpp  abb_utils.cpp
abb_irb1660_moveit_config/: .setup_assistant
abb_irb1660_moveit_config/config/: ompl_planning.yaml  sensors_3d.yaml
abb_irb1660_moveit_config/launch/: demo.launch  irb1660_6_155_moveit_controller_manager.launch.xml  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ros_controllers.launch  run_benchmark_ompl.launch  trajectory_execution.launch.xml  warehouse.launch
abb_irb1660_support/launch/: robot_interface_download_irb1660.launch
abb_irb1660_support/meshes/: base_link.stl  link_1.stl  link_3.stl
abb_irb1660_support/urdf/: irb1660_6_155.urdf
abb_robot_calibration/launch/: calibrate.launch  capture.launch
abb_ros/: README.md  imgui.ini
abb_ros/devel/: .catkin  .rosinstall  setup.sh
abb_ros/src/abb_robot_calibration/: CMakeLists.txt
abb_ros/src/abb_robot_calibration/abb_robot_calibration/: CMakeLists.txt
abb_ros/src/abb_robot_calibration/abb_robot_calibration/launch/: capture.launch
abb_ros/src/abb_robot_calibration/abb_robot_calibration/scripts/: load_joint_offsets.py  update_urdf.py
abb_ros/src/abb_robot_calibration/config/: calibration_poses.bag  calibration_poses_2.bag
abb_ros/src/abb_robot_calibration/launch/: calibrate.launch  capture.launch
abb_ros/src/abb_robot_calibration/src/: abb_robot_calibration_capture.cpp
backups_fieldlab/: calibration_poses_mounted_camera_w_led_and_checkerboards.bag  cartesian_poses_for_calibration.txt
fieldlab_cel3_calib/calibration_external_cam/: depth_fieldlab_cel3_calibration_output.yaml
fieldlab_cel3_calib/calibration_mounted_cam/: calibrated_fieldlab_cel3_calibration_output.urdf  depth_fieldlab_cel3_calibration_output.yaml
fieldlab_cel3_calib/calibration_multiple_cams/: calibrated_fieldlab_cel3_calibration_output.urdf  calibration_fieldlab_cel3_calibration_output.yaml
fieldlab_cel3_calib/config/: calibrate_with_external_camera.yaml  calibrate_with_mounted_camera.yaml  calibrate_with_multiple_cameras.yaml  calibration_poses_multiple_cameras.bag  calibration_poses_multiple_cameras_in_strings.txt  capture.yaml  capture_with_multiple_cameras.yaml
fieldlab_cel3_calib/launch/: cameras_cal.launch  robot_cal.launch  robot_cal_sim.launch
fieldlab_cel3_calib/scripts/: realsense_camera_launcher.py
industrial_robot_client/src/: custom_data_downloader.cpp  joint_relay_handler.cpp  joint_trajectory_downloader.cpp  joint_trajectory_interface.cpp
irb1660_meshes/: base_link.dae  base_link.stl  base_link_igs.stl  base_link_step.stl  link1.stl  link1_igs.stl  link1_step.stl  link2.stl  link2_igs.stl  link3.stl  link4.dae  link4.stl  link4_igs.stl  link4_step.stl  link5.dae  link5.stl  link5_igs.stl  link5_step.stl  link6.stl  link6_igs.stl  link6_step.stl  link_1.stl  link_1_bin.stl  link_2.stl  link_2_bin_zeroed.stl  link_3_bin_zeroed.stl  link_4.stl  link_4_bin_zeroed.stl  link_5.stl  link_5_bin_zeroed.stl  link_6.stl  link_6_bin_zeroed.stl
moveit_helper_scripts/: CMakeLists.txt
robot_calibration/scripts/: capture_poses
robot_calibration/src/: calibrate.cpp
robot_code/: CMakeLists.txt  package.xml
src/: README.md  README.md.old
src/abb_irb1660_moveit_config/: CMakeLists.txt
src/abb_irb1660_support/: CMakeLists.txt
src/abb_robot_calibration/: setup.py
src/fieldlab_cel3_calib/: CMakeLists.txt
src/fieldlab_cel3_calib/calibration_external_cam/abb_robot_calibration/: calibration_data_2019-01-25-13-18-31.bag
src/fieldlab_cel3_calib/calibration_mounted_cam/: calibrated_fieldlab_cel3_calibration_output.urdf  calibration_fieldlab_cel3_calibration_output.yaml
src/fieldlab_cel3_calib/config/: calibrate_with_multiple_cameras.yaml  calibration_poses_multiple_cameras.bag  calibration_poses_single_camera.bag  capture_with_external_camera.yaml  capture_with_mounted_camera.yaml  capture_with_multiple_cameras.yaml
(+315 files in other folders)
