<?xml version="1.0"?>
<package format="2">
  <name>webcam_calib</name>
  <version>0.0.0</version>
  <description>The webcam_calib package</description>

  <maintainer email="turtle@mail.com">turtle</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>

  </export>
</package>
